2000-12-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c (main):log DISK after checking if logfile exist.

2000-12-30 John R. Jackson <jrj@purdue.edu>

	* common-src/bsd-security.c: Improve the .rhosts/.amandahosts messages
	  when things go wrong.  Add support for "bsdsecurity" test program
	  in common-src.
	* common-src/Makefile.am: Ditto.
	* common-src/amanda.h: Ditto.
	* restore-src/amidxtaped.c: Ditto.
	* server-src/amindexd.c: Ditto.

2000-12-30 John R. Jackson <jrj@purdue.edu>

	* ChangeLog: Bring Jean-Louis into the right month :-).
	* changer-src/scsi-changer-driver.c: Untested changes to at least
	  get the code to compile on Solaris and to remove some warnings.
	* changer-src/scsi-defs.h: Ditto.
	* changer-src/scsi-solaris.c: Ditto.

2000-12-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/diskfile.c (add_disk): New function.
	* server-src/diskfile.h (add_disk): Prototype.
	* server-src/logfile.h (logtype_e): add L_DISK.
	* server-src/logfile.c (logtype_str): add "DISK".
	* server-src/amflush.c (main): log DISK.
	* server-src/planner.c (main): log DISK.
	* server-src/reporter.c: use DISK if available.

2000-12-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c: New [host disk]* pair arguments.
	* server-src/amflush.c: Ditto.
	* server-src/planner.c: Ditto.
	* server-src/amdump.sh.in: Ditto.
	* server-src/amrestore.c: Use new host/disk matcher.
	* man/amcheck.8.in: Document new [host disk]* pair arguments.
	* man/amflush.8.in: Ditto.
	* man/amdump.8.in: Ditto.

2000-12-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/diskfile.c (match_disklist): new function.
	* server-src/diskfile.h (struct disk_s): new field todo.
	* server-src/diskfile.h (match_disklist): prototype.

2000-12-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/match.c (match_word, match_host, match_disk): 
	new functions.